# lha-memoirs

./: .gitignore  .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  stylelint.config.cjs  temp_analyze.py  temp_convert_chapters.py  temp_word_count.py  tsconfig.json  tsconfig.node.json  vite-plugin-git-changelog.ts  vite.config.ts  vitest.config.ts
.github/: agent-instructions.md  copilot-instructions.md
docs/: tape_inventory.md
public/: .htaccess  photos.json  places.json  search-index.json  stream.php  timeline.json  videos.json
scripts/: 01_transcribe.py  02_correct_transcript.py  02_generate_waveform.py  02a_correct_dialog.py  03_analyze_chapters.py  03_generate_waveform.py  04_analyze_chapters.py  05_analyze_stories.py  05_find_story_overlaps.py  05_find_story_overlaps_fast.py  05a_update_alt_tellings_topics.py  05b_consolidate_alt_tellings.py  05b_find_story_overlaps_v2.py  05c_visualize_alt_tellings.py  06_build_search_index.py  06_find_story_overlaps.py  06_tokenfriendly.py  07_build_timeline.py  07_upload_to_gemini.py  README.md  apply_curated_corrections.py  build_search_index.py  check_gptoss.py  check_tdk_start.py  check_test_pairs.py  correct_transcript.py  correct_transcript_gemma.py  diagnose_cuda.py  find_known_matches.py  find_story_overlaps.py  generate-thumbnails.ts  process_all.py  requirements.txt  setup_env.py  (+4 more)
scripts/rag/: .env.example  README.md  benchmark_models.py  benchmark_results.json  benchmark_results.md  pyproject.toml  rag_server.py  rag_server_simple.py  restart.sh  start.sh  start_prod.sh
(+139 files in other folders)
