[project]
name = "lha-rag"
version = "1.0.0"
description = "Local RAG backend for LHA Memoirs using Ollama + ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "langchain-chroma>=1.1.0",
    "rank-bm25>=0.2.2",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rag-server = "rag_server:main"

[dependency-groups]
dev = []
